--- a/src/TestLibGuiReusables/Laboratorio.form
+++ b/src/TestLibGuiReusables/Laboratorio.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="title" type="java.lang.String" value="Laboratorio"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[420, 250]"/>
+      <Dimension value="[450, 250]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -20,7 +20,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-104,0,0,1,-122"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-94,0,0,1,-52"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -42,33 +42,26 @@
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jLabelNombre1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabelNombre1" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                           <Component id="jTextNombre1" min="-2" pref="251" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="jLabelNombre" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabelNombre" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                           <Component id="jTextNombre" min="-2" pref="251" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jLabelNombre4" max="32767" attributes="0"/>
                               <Component id="jLabelNombre2" alignment="0" max="32767" attributes="0"/>
                               <Component id="jLabelNombre3" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jLabelNombre4" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jTextNombre2" min="-2" pref="251" max="-2" attributes="0"/>
-                                      <Component id="jSpinner1" min="-2" pref="44" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="jSpinner2" min="-2" pref="44" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jTextNombre2" min="-2" pref="251" max="-2" attributes="0"/>
+                              <Component id="jSlider1Laboratorio" min="-2" max="-2" attributes="0"/>
+                              <Component id="jSpinner1" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -99,12 +92,12 @@
                       <Component id="jSpinner1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabelNombre3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jSpinner2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabelNombre4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jLabelNombre4" min="-2" max="-2" attributes="0"/>
+                      <Component id="jSlider1Laboratorio" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -140,10 +133,18 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelNombre4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ordenadores"/>
+            <Property name="text" type="java.lang.String" value="Personas en Laboratorio"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JSpinner" name="jSpinner2">
+        <Component class="javax.swing.JSlider" name="jSlider1Laboratorio">
+          <Properties>
+            <Property name="maximum" type="int" value="200"/>
+            <Property name="value" type="int" value="0"/>
+            <Property name="name" type="java.lang.String" value="jSlider1Laboratorio" noResource="true"/>
+          </Properties>
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSlider1LaboratorioStateChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
