--- a/src/TestLibGuiReusables/Prueba.form
+++ b/src/TestLibGuiReusables/Prueba.form
@@ -117,6 +117,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextNombre">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelCodigo">
           <Properties>
@@ -153,6 +156,12 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JSpinner" name="jSpinnerPresion">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="jSpinnerPresion" noResource="true"/>
+          </Properties>
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinnerPresionStateChanged"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JSpinner" name="jSpinnerTemperatura">
         </Component>
