--- a/src/TestLibGuiReusables/Laboratorio.form
+++ b/src/TestLibGuiReusables/Laboratorio.form
@@ -60,8 +60,12 @@
                           <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jTextNombre2" min="-2" pref="251" max="-2" attributes="0"/>
-                              <Component id="jSlider1Laboratorio" min="-2" max="-2" attributes="0"/>
                               <Component id="jSpinner1" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jSlider1Laboratorio" min="-2" pref="152" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jLabelPersonas" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                   </Group>
@@ -93,9 +97,10 @@
                       <Component id="jLabelNombre3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabelNombre4" min="-2" max="-2" attributes="0"/>
-                      <Component id="jSlider1Laboratorio" min="-2" max="-2" attributes="0"/>
+                      <Component id="jSlider1Laboratorio" max="32767" attributes="0"/>
+                      <Component id="jLabelPersonas" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -145,6 +150,8 @@
           <Events>
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSlider1LaboratorioStateChanged"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabelPersonas">
         </Component>
       </SubComponents>
     </Container>
